# SkrybGem

./: .env  .gitignore  README.md  ROADMAP.md  STATUS.md  pyproject.toml  spec.md
prd/: 000-initial-prd.md
src/skrybgem/: __init__.py  app.py  config.py  transcription.py
src/skrybgem/static/: __init__.py  index.html
tests/: test_app.py  test_smoke.py  test_transcription.py
