[project]
name = "skrybgem"
version = "0.1.0"
description = "Lokalna aplikacja webowa do dyktowania i poprawionej transkrypcji"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skrybgem"]
